--- a/frontend/src/components/WithdrawActions.module.scss
+++ b/frontend/src/components/WithdrawActions.module.scss
@@ -1,4 +1,5 @@
 @use "../styles/variables" as *;
+@use "sass:color";
 
 .container {
   margin-top: 1rem;
@@ -13,7 +14,8 @@
   font-weight: bold;
 
   &:hover {
-    background: darken($success, 10%);
+    // background: darken($success, 10%);
+    background: color.adjust($success, $lightness: -10%);
   }
   &:disabled {
     opacity: 0.5;
@@ -59,7 +61,8 @@
   font-weight: bold;
 
   &:hover {
-    background: darken($error, 10%);
+    // background: darken($error, 10%);
+    background: color.adjust($error, $lightness: -10%);
   }
 }
 
