--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -9,7 +9,8 @@ body {
   //   sans-serif;
   // font-family: "Roboto", sans-serif;
   // font-family: "Bitcount Single", system-ui;
-  font-family: "JetBrains Mono", monospace;
+  font-family: "Inter", sans-serif;
+  // font-family: "JetBrains Mono", monospace;
   background-color: $bg-dark;
   color: $text-main;
   -webkit-font-smoothing: antialiased;
